# ipcc_climate_zones

./: LICENSE  README.md  create_climate_zones.py  download.py  pyproject.toml  regrid_elevation.py
data/: download.py  elevation_0.5deg.nc  ipcc_climate_zones.geojson  ipcc_climate_zones.nc  ipcc_climate_zones.tif  regrid_elevation.py
notebooks/: ipcc_climate_zones.ipynb  vectorize_raster.ipynb
