[tool.poetry]
name = "ipcc-climate-zones"
version = "0.1.0"
description = ""
authors = ["Colin Hill <colinalastairhill@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ipcc_climate_zones"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
xarray = {extras = ["complete"], version = "^2023.10.1"}
jupyterlab = "^4.0.7"
tqdm = "^4.66.1"
ipykernel = "^6.25.2"
rioxarray = "^0.15.0"
matplotlib = "^3.8.0"
xee = "^0.0.1"
odc-geo = "^0.4.1"
netcdf4 = "^1.6.4"
dask = "^2023.10.0"
geopandas = "^0.14.0"
scipy = "^1.11.3"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.10.0"
pre-commit = "^3.5.0"
nbstripout = "^0.6.1"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
addopts = "--cov=ipcc_climate_zones --cov-branch --cov-report term-missing  -vv --color=yes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"