[project]
name = "ipcc-climate-zones"
version = "0.1.0"
description = "Code to create IPCC Climate Zones"
authors = [{name="Colin Hill", email="colinalastairhill@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dask>=2025.5.1",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "odc-geo>=0.4.10",
    "rioxarray>=0.19.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
    "xarray>=2025.7.0",
]